got card padding and spacing between elements fixed; need to address padding within the lower elements.

--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
@@ -5,23 +10,37 @@ body {
 
 .card {
   width: 400px;
+  /*height: 160px;*/
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  display: block;
+  /*width: 364px;*/
+  /*margin: 0px 8px 8px 8px;*/
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  display: inline-block;
+  margin: 8px 0px;
 }
 
 .button {
   background: #e3f4ff;
+  display: block;
+  /*margin: 8px 8px 0px 8px;*/
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: auto;
+  padding: 10px;
 }
